@@ -1,4 +1,4 @@
-$Id: $
+$Id:$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
@@ -7,10 +7,9 @@ $Id: $
 ------
 
 - Change CP to read configurations directly from the config instead of reading/parsing files 
-    * Adapt WebGUI:Status:Captiveportal to use captiveportal_read_db instead of reading in captiveportal.db
 
 - Change CP locking mechanisms so that locking is done in the captiveportal_read_db & captiveportal_write_db structures
 
 - Add debugging code and a secret DEBUG config option to trackdown possible problems when there are a lot of users conneced to CP
 
-- Create software schematics for better understanding call and functions
+- Create software schematics for better understanding calls and functions
